# 17.LLM_RAG_MS4M

./: .env  Comandos_Ollama.txt  RAG_1.ipynb  README.md  Rag_2_lang_chain.ipynb  api.py  cargar_data.py  cargar_solodata.py  chat1_llm.py  chat2_llm.py  pyproject.toml
